--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
-{{ define "header" }} 
-   {{ partial "site-navbar.html" . }} 
-   {{ partial "homepage-header.html" . }}  
+{{ define "header" }}
+   {{ partial "site-navbar.html" . }}
+   {{ partial "homepage-header.html" . }}
 
   <!-- Welcome Word -->
   {{ with $.Site.Params.welcome_head }}
@@ -13,7 +13,7 @@
   {{ end }}
   <!-- /.Welcome Word -->
 
-{{ end }} 
+{{ end }}
 
 
 {{ define "main" }}
@@ -23,9 +23,9 @@
       <!-- Sidebar -->
       <div class="col-md-3">
         <!-- <hr> -->
-        
+
         {{ partial "sidebar-categories.html" . }}
-        
+
         {{ partial "sidebar-tags.html" . }}
 
         {{ partial "sidebar-series.html" . }}
@@ -35,7 +35,7 @@
 
       <!-- Post list -->
       <!-- <div class="pt-5 px-5 mx-5"> -->
-      <div class="col-md-9 mt-3">  
+      <div class="col-md-9 mt-3">
         {{ $totalpostscount := len (.Data.Pages) }}
         {{ $latestpostscount := .Site.Params.latestpostscount | default $totalpostscount }}
         {{ if gt $latestpostscount 0 }}
@@ -43,10 +43,10 @@
             {{ i18n "latestPosts" }}
           </div> -->
           <div>
-              {{ range (first $latestpostscount .Data.Pages.ByPublishDate.Reverse ) }}
+              {{ range (first $latestpostscount (where .Site.Pages "Kind" "page" )) }}
                   {{ partial "post-card.html" . }}
               {{ end }}
-              
+
           </div>
         {{ end }}
 
