--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1" />
   {{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
   <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}">
-  
+
   {{ template "_internal/opengraph.html" . }}
 
   <title>
@@ -35,12 +35,12 @@
 
   <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Ubuntu+Mono:400,400i,700,700i|Raleway:300,400,500,600">
-  <link href="{{ "css/font.css" | absURL }}" rel="stylesheet"> 
-    
+  <link href="{{ "css/font.css" | absURL }}" rel="stylesheet">
+
   <!-- CSS -->
   <link href="{{ "css/vendors/bootstrap4/bootstrap.min.css" | absURL }}" rel="stylesheet">
-  <link href="{{ "css/vendors-extensions/mdb/mdb.min.css" | absURL }}" rel="stylesheet"> 
-  <link href="{{ "css/vendors/mdb/style.min.css" | absURL }}" rel="stylesheet"> 
+  <link href="{{ "css/vendors-extensions/mdb/mdb.min.css" | absURL }}" rel="stylesheet">
+  <link href="{{ "css/vendors/mdb/style.min.css" | absURL }}" rel="stylesheet">
   <link href="{{ "css/main.css" | absURL }}" rel="stylesheet">
 
 
@@ -55,9 +55,9 @@
 
 
   <!-- RSS -->
-  {{ if and .Site.Params.include_rss .RSSLink }}
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-  {{ end }}
+<!--  {{ if and .Site.Params.include_rss .RSSLink }}-->
+<!--  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />-->
+<!--  {{ end }}-->
 
   <style type="text/css">
       @media (min-width: 800px) and (max-width: 850px) {
@@ -69,13 +69,13 @@
 
 
   <!-- KaTeX -->
-  {{ if .Site.Params.katex }}  
+  {{ if .Site.Params.katex }}
     <link rel="stylesheet" href="{{ "js/vendors/katex/katex.min.css"| absURL }}">
   {{ end }}
   <!-- /.KaTeX -->
 
   <!-- Highlight -->
-  {{ if .Site.Params.highlightjs }}  
+  {{ if .Site.Params.highlightjs }}
     <link rel="stylesheet" href="{{ "css/vendors/highlight/github-gist.css"| absURL }}">
   {{ end }}
 
