--- a/layouts/partials/site-navbar.html
+++ b/layouts/partials/site-navbar.html
@@ -1,4 +1,4 @@
-{{ $url := .URL }}
+{{ $url := .RelPermalink }}
 {{ $type := .Type }}
 <!-- Navbar -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
@@ -26,11 +26,11 @@
           <li class="nav-item {{ if eq $url "/" }} active {{ end }}">
             <a class="nav-link" href="{{ .Site.BaseURL }}">Home{{ if eq $url "/" }} <span class="sr-only">(current)</span>{{ end }}</a>
           </li>
-          {{ range .Site.Menus.main }}   
+          {{ range .Site.Menus.main }}
             <li class="nav-item {{ if eq $type (substr .URL 1 -1) }} active {{ end }}">
               <a class="nav-link" href="{{ .URL | absURL }}" >{{ .Name }} {{ if eq $type (substr .URL 1 -1) }} <span class="sr-only">(current)</span>{{ end }} </a>
             </li>
-          
+
           {{ end }}
         </ul>
 
